--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           flake8 server/ \
             --max-line-length=88 \
-            --extend-ignore=E203,W503 \
+            --extend-ignore=E203,W503,F401 \
             --format='::error file=%(path)s,line=%(row)d,col=%(col)d::%(text)s'
 
       - name: 🧪 Correr tests con Pytest
