--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r server/requirements.txt
-          pip install flake8 black pytest pytest-cov
+          pip install flake8 black pytest pytest-cov httpx
 
       - name: 🎨 Verificar formato con Black
         run: |
@@ -69,7 +69,7 @@ jobs:
         run: |
           flake8 server/ \
             --max-line-length=88 \
-            --extend-ignore=E203,W503,F401 \
+            --extend-ignore=E203,W503 \
             --format='::error file=%(path)s,line=%(row)d,col=%(col)d::%(text)s'
 
       - name: 🧪 Correr tests con Pytest
